--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,8 @@
     padding: 45px 0 41px 0;
     max-width: 882px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
+    display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 620px) {
