--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @import url(./blocks/page-container/page-container.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__menu/header__menu.css);
+@import url(./blocks/header/__item/header__item.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__button/profile__button.css);
 @import url(./blocks/profile/__info/profile__info.css);
@@ -24,6 +26,9 @@
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/__overlay/popup__overlay.css);
 @import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__container/_type/popup__container_type_image.css);
+@import url(./blocks/popup/__container/_type/popup__container_type_result-image.css);
+@import url(./blocks/popup/__result/popup__result.css);
 @import url(./blocks/popup/__close/popup__close.css);
 @import url(./blocks/popup/__field/popup__field.css);
 @import url(./blocks/popup/__header/popup__header.css);
@@ -38,6 +43,8 @@
 @import url(./blocks/popup/__figure/popup__figure.css);
 @import url(./blocks/popup/__figure-container/popup__figure-container.css);
 @import url(./blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(./blocks/popup/__result/popup__result.css);
+@import url(./blocks/popup/__text/popup__text.css);
 @import url(./blocks/elements/elements.css);
 @import url(./blocks/elements/__card/elements__card.css);
 @import url(./blocks/elements/__image/elements__image.css);
@@ -55,4 +62,11 @@
 @import url(./blocks/profile/__card/profile__card.css);
 @import url(./blocks/span-avatar/span-avatar.css);
 @import url(./blocks/body-background/body-background.css);
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__input/login__input.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__button/login__button.css);
+@import url(./blocks/login/__signin/login__signin.css);
+
 
